--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,17 @@
       <div
         class="max-w-2xl w-3/5 bg-slate-50 shadow-xl py-4 px-8 flex flex-col justify-between h-5/6"
       >
-        <div class="hidden sadsad">
+        <div class="flex flex-col">
           <div class="flex justify-between">
             <div class="">
               STOCK <br />
               CENTER
             </div>
             <div class="text-red-600 font-bold">Items in stock</div>
-            <div class="">burger</div>
+
+            <div class="w-4 h-4">
+              <img src="./static/menu.png" alt="bars" />
+            </div>
           </div>
 
           <table class="table-auto mt-8">
@@ -62,42 +65,60 @@
     </div>
     <div
       class="opacity-0 hidden transition-opacity duration-500 absolute w-screen h-screen"
+      id="modal"
     >
-      <div
-        class="fixed left-0 top-0 bg-black bg-opacity-50 w-screen h-screen"
-        id="modal"
-      >
+      <div class="fixed left-0 top-0 bg-black bg-opacity-50 w-screen h-screen">
         <div class="flex justify-center items-center w-screen h-screen">
           <div
             class="bg-white rounded shadow-lg w-4/12 flex flex-col py-2 h-4/6 justify-between"
           >
             <div class="flex justify-between px-4 py-2">
               <h2 class="font-semibold">New item</h2>
-              <div class="">cross</div>
+              <img
+                src="./static/x-button.png"
+                alt="cross"
+                class="w-3 h-3"
+                onclick="hideModal()"
+              />
             </div>
 
             <div
-              class="flex flex-col gap-4 border-t-2 border-b-2 border-slate-200 py-4"
+              class="flex flex-col gap-4 border-t-2 border-b-2 py-4 border-slate-200"
             >
-              <label for="title" class="px-4 py-2">Title</label>
-              <input
-                type="text"
-                name="title"
-                class="border border-slate-200 rounded-md px-4 py-2 mx-4"
-              />
-              <label for="price" class="px-4 py-2">Price</label>
-              <input
-                type="text"
-                name="price"
-                id=""
-                class="border border-slate-200 rounded-md px-4 py-2 mx-4"
-              />
-              <label for="date" class="px-4 py-2">Date and time</label>
-              <input
-                type="text"
-                name="date"
-                class="border border-slate-200 rounded-md px-4 py-2 mx-4"
-              />
+              <div class="flex flex-col">
+                <label for="title" class="px-4 py-2">Title</label>
+                <input
+                  id="title"
+                  type="text"
+                  name="title"
+                  class="border rounded-md px-4 py-2 mx-4 border-slate-200"
+                />
+                <span class="text-red-400 ml-5 invisible">Invalid title</span>
+              </div>
+
+              <div class="flex flex-col">
+                <label for="price" class="px-4 py-2">Price</label>
+                <input
+                  id="price"
+                  type="text"
+                  name="price"
+                  id=""
+                  class="border border-slate-200 rounded-md px-4 py-2 mx-4 invalid:border-red-500"
+                />
+                <span class="text-red-400 ml-5 invisible">Invalid price</span>
+              </div>
+              <div class="flex flex-col">
+                <label for="date" class="px-4 py-2">Date and time</label>
+                <input
+                  id="date"
+                  type="text"
+                  name="date"
+                  class="border border-slate-200 rounded-md px-4 py-2 mx-4 invalid:border-red-500"
+                />
+                <span class="text-red-400 ml-5 invisible"
+                  >Invalid date and time</span
+                >
+              </div>
             </div>
 
             <div class="flex justify-end">
@@ -105,16 +126,19 @@
                 type="button"
                 value="Close"
                 class="border border-slate-200 rounded-md px-4 py-2 mx-4 bg-gray-600 text-white"
+                onclick="hideModal()"
               />
               <input
                 type="submit"
                 value="Add"
                 class="border border-slate-200 rounded-md px-4 py-2 mx-4 text-white bg-red-500"
+                onclick="validate()"
               />
             </div>
           </div>
         </div>
       </div>
     </div>
+    <script src="./main.js"></script>
   </body>
 </html>
