--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                 <th>Date and time</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="tbody">
               <tr class="border-t-2 border-slate-200">
                 <td>1</td>
                 <td>Headphones</td>
