--- a/index.html
+++ b/index.html
@@ -35,7 +35,20 @@
                   <th>Date and<br />time</th>
                 </tr>
               </thead>
-              <tbody id="tbody"></tbody>
+              <tbody id="tbody">
+                <!-- <tr class="table__row">
+                  <td>12</td>
+                  <td>title</td>
+                  <td>2555</td>
+                  <td><div>01.03.2016<div>21:01:14</div></td>
+                </tr>
+                <tr class="table__row">
+                  <td>12</td>
+                  <td>title</td>
+                  <td>2555</td>
+                  <td><div>01.03.2016<div>21:01:14</div></td>
+                </tr> -->
+              </tbody>
             </table>
           </div>
 
