--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </div>
             </header>
             <table class="table table__inner">
-              <thead>
+              <thead class="table__thead">
                 <tr class="table__row">
                   <th>#</th>
                   <th>Title</th>
@@ -37,7 +37,7 @@
               </thead>
               <tbody id="tbody">
                 <!-- <tr class="table__row">
-                  <td>12</td>
+                  <td class="table__item-id">12</td>
                   <td>title</td>
                   <td>2555</td>
                   <td><div>01.03.2016<div>21:01:14</div></td>
